--- a/tidder-front/src/main/resources/templates/newPost.html
+++ b/tidder-front/src/main/resources/templates/newPost.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <form class="form-horizontal" th:action="@{'/t/'+${topicName}+'/newPost'}" method="post">
+                <form class="form-horizontal" th:action="@{'/t/'+${topicName}+'/newPost'}" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <label class="control-label col-sm-2" for="title">Title</label>
                         <div class="col-sm-10">
@@ -35,6 +35,12 @@
                         <label class="control-label col-sm-2" for="body">Content</label>
                         <div class="col-sm-10">
                             <textarea type="text" class="form-control" id="body" name="body" placeholder="Write your content here"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="image">Optional image</label>
+                        <div class="col-sm-10">
+                            <input type="file" name="image" id="image" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
