--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -48,6 +48,12 @@
                 <h3 class="section-subheading my-0">Or select a topic from the list</h3>
             </div>
 
+            <div class="text-center col-md-6 offset-md-3 my-1 py-2 rounded" style="background-color: #333">
+                <a class="text-center" href="/t/all">/t/all</a>
+            </div>
+            <div class="text-center col-md-6 offset-md-3 my-1 py-2 rounded" style="background-color: #333">
+                <a class="text-center" href="/t/feed">/t/feed</a>
+            </div>
             <div th:each="topic, topicItr : ${allTopics}" th:if="${topicItr.index <= 10}" class="text-center col-md-6 offset-md-3 my-1 py-2 rounded" style="background-color: #333">
                 <a class="text-center" th:href="'/t/'+${topic.getName()}" th:text="'/t/'+${topic.getName()}"></a>
             </div>
