--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -56,14 +56,18 @@
             <div th:if="currentUser!=null" class="row">
                 <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Your profile</h4>
-                    <h6 class="ml-0">Created: 2 days ago</h6>
-                    <h6 class="ml-0" th:text="'Username: '+${'sagen'}"></h6>
-                    <h6 class="ml-0">Points: 10 579</h6>
+                    <h6 class="ml-0" th:text="'Username: '+${currentUser.getUsername()}"></h6>
                 </div>
             </div>
             <div class="row">
                 <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Random topics</h4>
+                    <a href="/t/all">
+                        <h6 class="ml-0">/t/all</h6>
+                    </a>
+                    <a href="/t/feed">
+                        <h6 class="ml-0">/t/feed</h6>
+                    </a>
                     <a th:each="topic, topicItr : ${allTopics}" th:if="${topicItr.index <= 10}" th:href="'/t/'+${topic.getName()}">
                         <h6 class="ml-0" th:text="'/t/'+${topic.getName()}"></h6>
                     </a>
