--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -15,7 +15,6 @@
     <div class="container">
         <div class="intro-text">
             <div class="intro-lead-in">Welcome to Tidder</div>
-            <div th:if="false" class="intro-heading">Exploring the internet together</div>
         </div>
     </div>
 </header>
@@ -25,7 +24,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Start exploring</h2>
-                <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
+                <h3 class="section-subheading">Select a tidder channel to continue</h3>
             </div>
         </div>
         <form action="/t" method="POST">
