--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -49,7 +49,7 @@
 
         <div class="col-lg-3 col-md-4">
 
-            <div th:if="${currentUser != null}" class="mx-auto">
+            <div th:if="${currentUser != null && topic != null && !topic.getName().equalsIgnoreCase('all') && !topic.getName().equalsIgnoreCase('feed')}" class="mx-auto">
                 <a th:href="'/t/'+${topicName}+'/newPost'" class="btn btn-primary btn-lg">New Post</a>
             </div>
             <div th:if="${currentUser != null && !currentUser.getTopics().contains(topicName)}" class="mx-auto">
@@ -58,7 +58,6 @@
             <div th:if="${currentUser != null && currentUser.getTopics().contains(topicName)}" class="mx-auto">
                 <a th:href="'/t/'+${topicName}+'/unfollow'" class="btn btn-primary btn-lg">Unfollow <span th:text="${topicName}"></span></a>
             </div>
-
 
             <div th:if="${currentUser!=null}" class="row">
                 <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
