--- a/tidder-front/src/main/resources/templates/fragments/layout.html
+++ b/tidder-front/src/main/resources/templates/fragments/layout.html
@@ -65,7 +65,7 @@
                         </i><span th:text="' '+${currentUser.getFirstName()}"></span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown-user">
-                        <a class="dropdown-item" href="/home">Your profile</a>
+                        <a class="dropdown-item" th:href="/t/+${currentUser.getUsername()}">Your profile</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/logout">Log out</a>
                     </div>
