--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -49,35 +49,35 @@
 
         <div class="col-lg-3 col-md-4">
             <div th:if="${topic != null && !topic.getName().equalsIgnoreCase('all') && !topic.getName().equalsIgnoreCase('feed')}" class="row">
-                <form class="form-inline" method="post" th:action="${'/t/'+topic.getName()}">
-                    <input type="text" name="search" id="search" class="form-control" placeholder="Search in this topic">
+                <form class="form-inline d-flex d-block flex-column" style="width:100%;" method="post" th:action="${'/t/'+topic.getName()}">
+                    <input type="text" name="search" id="search" class="form-control flex-grow-1" placeholder="Search in this topic">
                     <button stype="submit" class="btn btn-primary">Search</button>
                 </form>
             </div>
 
             <div th:if="${currentUser != null && topic != null && !topic.getName().equalsIgnoreCase('all') && !topic.getName().equalsIgnoreCase('feed')}" class="mx-auto">
-                <a th:href="'/t/'+${topicName}+'/newPost'" class="btn btn-primary btn-lg">New Post</a>
+                <a style="width:100%;" th:href="'/t/'+${topicName}+'/newPost'" class="btn btn-primary btn-lg">New Post</a>
             </div>
             <div th:if="${currentUser != null && !currentUser.getTopics().contains(topicName)}" class="mx-auto">
-                <a th:href="'/t/'+${topicName}+'/follow'" class="btn btn-primary btn-lg">Follow <span th:text="${topicName}"></span></a>
+                <a style="width:100%;" th:href="'/t/'+${topicName}+'/follow'" class="btn btn-primary btn-lg">Follow <span th:text="${topicName}"></span></a>
             </div>
             <div th:if="${currentUser != null && currentUser.getTopics().contains(topicName)}" class="mx-auto">
-                <a th:href="'/t/'+${topicName}+'/unfollow'" class="btn btn-primary btn-lg">Unfollow <span th:text="${topicName}"></span></a>
+                <a style="width:100%;" th:href="'/t/'+${topicName}+'/unfollow'" class="btn btn-primary btn-lg">Unfollow <span th:text="${topicName}"></span></a>
             </div>
 
             <div th:if="${currentUser!=null}" class="row">
                 <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
-                    <h4 class="text-align-center">Your profile</h4>
+                    <h5 class="text-align-center">Your profile</h5>
                     <a th:href="'/u/'+${currentUser.getUsername()}"><h6 class="ml-0" th:text="'Username: '+${currentUser.getUsername()}"></h6></a>
-                    <h4 class="ml-0">People you follow</h4>
+                    <h5 class="ml-0">People you follow</h5>
                     <a th:each="u : ${currentUser.getUsers()}" th:text="${'/u/'+u}"><h6 th:text="${'/u/'+u}"></h6></a>
-                    <h4>Topics you follow</h4>
+                    <h5>Topics you follow</h5>
                     <a th:each="t : ${currentUser.getTopics()}" th:text="${'/t/'+t}"><h6 th:text="${'/t/'+t}"></h6></a>
                 </div>
             </div>
             <div class="row">
                 <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
-                    <h4 class="text-align-center">Random topics</h4>
+                    <h5 class="text-align-center">Random topics</h5>
                     <a href="/t/all">
                         <h6 class="ml-0">/t/all</h6>
                     </a>
