--- a/tidder-front/src/main/resources/templates/fragments/layout.html
+++ b/tidder-front/src/main/resources/templates/fragments/layout.html
@@ -67,6 +67,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown-user">
                         <a class="dropdown-item" th:href="'/u/'+${currentUser.getUsername()}">Your profile</a>
                         <div class="dropdown-divider"></div>
+                        <a class="dropdown-item text-danger" href="/deleteMe">Delete account!</a>
                         <a class="dropdown-item" href="/logout">Log out</a>
                     </div>
                 </li>
