--- a/tidder-front/src/main/resources/templates/user.html
+++ b/tidder-front/src/main/resources/templates/user.html
@@ -28,9 +28,13 @@
             <th:block th:each="post : ${posts}">
             <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px !important;">
-                    <span class="font-weight-bold" style="color: green;">198</span>
+                    <a th:href="${'/u/' + post.getTopic() + '/' + post.getId() + '/upvote'}">
+                        <span class="font-weight-bold" style="color: green;" th:text="${post.getUpvotes()}"></span>
+                    </a>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold" style="color: red;">12</span>
+                    <a th:href="${'/u/' + post.getTopic() + '/' + post.getId() + '/downvote'}">
+                        <span class="font-weight-bold" style="color: red;" th:text="${post.getDownvotes()}"></span>
+                    </a>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
                     <span class="font-weight-light text-truncate"><span th:text="${post.humanTimeSince()}"></span> | by <a th:text="${post.getOwner()}" th:href="'/u/'+${post.getOwner()}"></a> | <a th:href="'/t/'+${post.getTopic()}" th:text="'/t/'+${post.getTopic()}"></a></span>
